# danwa

./: .danwa-config  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile.frontend  INSTALL.md  Makefile  README.md  README.zh.md  changelog.md  docker-compose.yml  manage.sh  opencode.json  pyproject.toml  setup.sh  sprint_017_versionierung.patch  version
.kilo/: agent-manager.json
.roo/: mcp.json
.sisyphus/: boulder.json
archive/: MIGRATION_REPORT.md  frontend-README.zh.md  notes.txt  xiaomi-mimo-v2.5-pro.yaml.duplicate
backend/: AGENTS.md  __init__.py  main.py
config/: a2a.json  llm_profiles.yaml  llm_profiles.yaml_backup  prompt_variants.yaml  prompt_variants.yaml_example  settings.yaml  settings.yaml_example
debate_engine/: main.py
docs/: 2026-05-28_multi-user-implementation.md  2026-05-28_ui-ux-i18n-a11y-audit.md  2026-06-05_workflow-pipeline-component.md  2026-06-15_case-space-walkthrough.md  AGENTS.md  PADDLEOCR_COMPATIBILITY_REPORT.md  adr-001-database-ssot.md  api-reference.json  api-reference.md  bidirectional-workflow-nodes-ui-and-usage-guide.md  blueprint-canvas-phase1.md  blueprint-canvas-phase2.md  blueprint-canvas-phase3.md  blueprint-canvas-phase4.md  elevator-pitch.md  module-administration.md  module-development-guide.md  technical_documentation.md  user_manual.md
external_plugins/: README.md
frontend/: AGENTS.md  README.md  index.html  package-lock.json  package.json  playwright.config.js  tailwind.config.js  vite.config.js  vitest.config.js
modules/: AGENTS.md
plans/: 002_tenant_case_architecture.md  010-ssot-en-uebersetzungscache.md  012-uebersetzungscache.md  014-migration-cleanup.md  018-todo-liste-unimplementierte-elemente.md  019-followup-debatte.md  020-i18n-mehrsprachigkeit.md  2026-05-23_kitsune-agent.md  2026-05-24_bundle-composer.md  2026-05-25_multi-phase-debate.md  2026-05-28_multi-user.md  2026-05-28_ui-multi-user.md  (+62 more)
src/: AGENTS.md
(+1502 files in other folders)
