[project]
name = "debate-agent"
version = "0.1.0"
description = "Auditierbarer Multi-Agenten-Debatten-Workflow"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.40.0",
    "chainlit>=1.1.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0.0",
    "httpx>=0.27.0",
    "duckduckgo-search>=6.0.0",
    "pdfplumber>=0.10.0",
    "pypdf>=4.0.0",
    "odfpy>=1.4.1",
    "python-docx>=1.1.0",
    "chromadb>=0.5.0",
    "weasyprint>=61.0"
]

[tool.uv]
dev-dependencies = ["pytest>=8.0", "ruff>=0.4"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]
