[project]
name = "debate-agent"
version = "2.0.0"
description = "Auditierbarer Multi-Agenten-Debatten-Workflow"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.40.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.0",
    "httpx>=0.27.0",
    "duckduckgo-search>=6.0.0",
    "pdfplumber>=0.10.0",
    "pypdf>=4.0.0",
    "odfpy>=1.4.1",
    "python-docx>=1.1.0",
    "chromadb>=0.5.0",
    "weasyprint>=61.0",
    "tiktoken>=0.7.0",
    "rank_bm25>=0.2.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "jinja2>=3.1.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "tests_debate_engine"]
pythonpath = ["."]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]
dms = ["paddlepaddle>=3.0", "paddleocr>=3.5.0"]
